# BankCodeSearch

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/banks/: models.py  urls.py  views.py
backend/banks/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/templates/: detail.html
frontend/: index.html  jsconfig.json  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Detail.vue  Select.vue
frontend/src/router/: index.js
src/: App.vue  main.js
src/assets/: style.css
src/components/: Detail.vue  Select.vue
