[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["tw30006 <original.heart.2016@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
pandas = "^2.2.2"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
